Parameterize base branch name

--- a/trellish.example.yml
+++ b/trellish.example.yml
@@ -15,5 +15,8 @@ trello_oauth_token: numbers_and_letters_and_stuff
 # and copy the token parameter from the response here.
 github_oauth_token: numbers_and_letters_and_stuff
 
+# The branch you want your changes merged into
+github_base_branch: master
+
 # Name of your QA list in Trello
-qa_list_name = 'QA'
+qa_list_name: QA
