--- a/trellish.example.yml
+++ b/trellish.example.yml
@@ -27,6 +27,6 @@ in_progress_list_name: In progress
 qa_list_name: QA
 
 # Campfire subdomain, room & your token
-campfire_subdomain: subdomain
-campfire_token: 1111111111111111111111111111111111111111
-campfire_room: Development
+#campfire_subdomain: subdomain
+#campfire_token: 1111111111111111111111111111111111111111
+#campfire_room: Development
